@@ -62,16 +62,16 @@ config.kPlatforms = {
         layoutTestResultsURL: 'http://build.chromium.org/f/chromium/layout_test_results',
         waterfallURL: 'http://build.chromium.org/p/chromium.webkit/waterfall',
         builders: {
-            'Webkit Win': {version: 'xp'},
-            'Webkit Win7': {version: 'win7'},
-            'Webkit Win (dbg)(1)': {version: 'xp', debug: true},
-            'Webkit Win (dbg)(2)': {version: 'xp', debug: true},
-            'Webkit Linux': {version: 'lucid', is64bit: true},
-            'Webkit Linux 32': {version: 'lucid'},
-            'Webkit Linux (dbg)': {version: 'lucid', is64bit: true, debug: true},
-            'Webkit Mac10.6': {version: 'snowleopard'},
-            'Webkit Mac10.6 (dbg)': {version: 'snowleopard', debug: true},
-            'Webkit Mac10.7': {version: 'lion'},
+            'WebKit XP': {version: 'xp'},
+            'WebKit Win7': {version: 'win7'},
+            'WebKit Win7 (dbg)(1)': {version: 'win7', debug: true},
+            'WebKit Win7 (dbg)(2)': {version: 'win7', debug: true},
+            'WebKit Linux': {version: 'lucid', is64bit: true},
+            'WebKit Linux 32': {version: 'lucid'},
+            'WebKit Linux (dbg)': {version: 'lucid', is64bit: true, debug: true},
+            'WebKit Mac10.6': {version: 'snowleopard'},
+            'WebKit Mac10.6 (dbg)': {version: 'snowleopard', debug: true},
+            'WebKit Mac10.7': {version: 'lion'},
         },
         haveBuilderAccumulatedResults : true,
         useDirectoryListingForOldBuilds: true,
